--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,11 @@
     <string name="ok">OK</string>
     <string name="cancel">CANCEL</string>
     <string name="product_code">Product Code : </string>
-    <string name="the_1_card">Redeem your point %1$,d points</string>
+    <string name="the_1_card">Redeem your point %1$,d points</string>ฟ
+    <string name="alert_compare">มีการเพิ่มสินค้า</string>
+    <string name="alert_compare_yes">\nเรียบร้อยแล้ว</string>
+    <string name="alert_count">จำนวนสินค้ามากกว่าที่ Store กำหนด</string>
+    <string name="alert_stock">สินค้า Out Stock</string>
     <!-- Compare -->
     <string name="compare_header">Compare Product</string>
 
@@ -61,6 +65,16 @@
     <string name="address">Address</string>
     <string name="stock">Stock</string>
 
+    <!-- Drawer -->
+    <string name="drawer_delivery">Delivery Schedule</string>
+    <string name="drawer_compare">Compare Product</string>
+    <string name="drawer_change">Change Language</string>
+    <string name="drawer_help">Help</string>
+
+    <!-- AppSecret -->
+    <string name="secret">djZtdHRZck9rTDdKVGhkZWF3NEdlN2FDR0JRQlQ0aFovQ0ViWktCNnd2eG5UQUVneFdpVDJRPT0=</string>
+    <string name="url_hdl">http://10.5.0.31/HDLAPIDEV/Token/CreateToken</string>
+
     <!-- Date -->
     <string name="sun">SUN</string>
     <string name="mon">MON</string>
@@ -70,10 +84,10 @@
     <string name="fri">FRI</string>
     <string name="sat">SAT</string>
     <string name="last_date">30</string>
-    <string name="time_10am">10.00 - 12.00</string>
-    <string name="time_12pm">12.00 - 14.00</string>
-    <string name="time_14pm">14.00 - 16.00</string>
-    <string name="time_16pm">16.00 - 18.00</string>
-    <string name="time_18pm">18.00 - 20.00</string>
-    <string name="time_20pm">20.00 - 22.00</string>
+    <string name="time_10am">09:00 - 09:30</string>
+    <string name="time_12pm">11:00 - 11:30</string>
+    <string name="time_14pm">13:00 - 13:30</string>
+    <string name="time_16pm">15:00 - 15:30</string>
+    <string name="time_18pm">17:00 - 17:30</string>
+    <string name="time_20pm">19:00 - 19:30</string>
 </resources>
