--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="time_20pm" translatable="false">19:00 - 19:30</string>
 
     <!--API-->
-    <string name="product_list">items[id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store]],total_count</string>
-    <string name="product_detail">sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,specifications,promotion,payment]</string>
+    <string name="product_list">items[id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,brand]],total_count</string>
+    <string name="product_detail">id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,specifications,promotion,payment,brand]</string>
     <string name="url_image">https://prod.powerbuy.co.th/media/catalog/product</string>
 </resources>
