--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PowerBuy Store</string>
+
+    <!--API-->
+    <string name="product_list">items[id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,brand]],total_count</string>
+    <string name="product_detail">id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,specifications,promotion,payment,brand]</string>
+    <string name="url_image">https://prod.powerbuy.co.th/media/catalog/product</string>
+
+    <!--Login-->
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="user">PwbUserName</string>
+    <string name="passwordDetail">Pwb1199</string>
+    <string name="error">พบข้อผิดพลาด</string>
+    <string name="error_login">Username/Password ไม่ถูกต้อง</string>
 </resources>
