--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,4 +17,5 @@
     <string name="passwordDetail">Pwb1199</string>
     <string name="error">พบข้อผิดพลาด</string>
     <string name="error_login">Username/Password ไม่ถูกต้อง</string>
+    <string name="add_to_cart">Add to Cart</string>
 </resources>
