--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,5 @@
     <string name="passwordDetail">Pwb1199</string>
     <string name="error">พบข้อผิดพลาด</string>
     <string name="error_login">Username/Password ไม่ถูกต้อง</string>
-    <string name="add_to_cart">ใส่รถเข็น</string>
+    <string name="add_to_cart">Add to cart</string>
 </resources>
