--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,5 @@
     <string name="error">พบข้อผิดพลาด</string>
     <string name="error_login">Username/Password ไม่ถูกต้อง</string>
     <string name="add_to_cart">Add to Cart</string>
+    <string name="brand">Brand</string>
 </resources>
