--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,4 +19,5 @@
     <string name="error_login">Username/Password ไม่ถูกต้อง</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="brand">Brand</string>
+    <string name="loading">Loading...</string>
 </resources>
