--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,5 @@
     <string name="error_login">Username/Password ไม่ถูกต้อง</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="brand">Brand</string>
+    <string name="loading">Loading...</string>
 </resources>
