--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,8 @@
     <string name="soi">Soi</string>
     <string name="street">Street</string>
     <string name="tel_or_mobile">Tel/Mobile No.</string>
+    <string name="province">Province</string>
+    <string name="district">District</string>
+    <string name="sub_district">Sub district</string>
+    <string name="post_code">Postcode</string>
 </resources>
