EO-2 Create PaymentSuccessFragment part1

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,4 +38,11 @@
     <string name="district">District</string>
     <string name="sub_district">Sub district</string>
     <string name="post_code">Postcode</string>
+    <string name="success">Success</string>
+    <string name="purchasing_number">Purchasing number:</string>
+    <string name="products">Products</string>
+    <string name="price">Price</string>
+    <string name="qty">Qty</string>
+    <string name="total_price">Total</string>
+    <string name="finished">Finished</string>
 </resources>
