EO-15 Fix when scan another bar code should show not found page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="phone">Phone</string>
     <string name="open_today">Open Today</string>
     <string name="branch">Branch</string>
+    <string name="search_not_found">ไม่พบข้อมูลที่ค้นหา</string>
 </resources>
