--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,7 +43,8 @@
     <string name="products">Products</string>
     <string name="price">Price</string>
     <string name="qty">Qty</string>
-    <string name="total_price">Total</string>
+    <string name="total">Total</string>
+    <string name="total_price">Total :</string>
     <string name="finished">Finished</string>
     <string name="order_detail">Order Details</string>
     <string name="personal_detail">Personal Details</string>
@@ -54,5 +55,9 @@
     <string name="open_today">Open Today</string>
     <string name="branch">Branch</string>
     <string name="search_not_found">ไม่พบข้อมูลที่ค้นหา</string>
+    <string name="product_price">Price :</string>
 
+    <!-- Shared Preference -->
+    <string name="preference_file_name">pwb_app_preference</string>
+    <string name="not_have_products_in_cart">Not have a product in your cart.</string>
 </resources>
