--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -60,4 +60,5 @@
     <!-- Shared Preference -->
     <string name="preference_file_name">pwb_app_preference</string>
     <string name="not_have_products_in_cart">Not have a product in your cart.</string>
+    <string name="added_to_cart">This product is added to card.</string>
 </resources>
