--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,9 @@
     <string name="preference_file_name">pwb_app_preference</string>
     <string name="not_have_products_in_cart">Not have a product in your cart.</string>
     <string name="added_to_cart">This product is added to card.</string>
+
+    <!-- Cart -->
+    <string name="title_confirm_delete_item">คุณต้องการลบสินค้าชิ้นนี้ออกจากตะกร้า?</string>
+    <string name="yes">ใช่</string>
+    <string name="no">ไม่ใช่</string>
 </resources>
