--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -68,5 +68,6 @@
     <string name="no">ไม่ใช่</string>
     <string name="format_header_cart_items">รถเข็นของคุณ(%s ชิ้น)</string>
     <string name="name_price">Price :</string>
+    <string name="skip">SKIP</string>
 
 </resources>
