--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,5 +69,6 @@
     <string name="format_header_cart_items">รถเข็นของคุณ(%s ชิ้น)</string>
     <string name="name_price">Price :</string>
     <string name="skip">SKIP</string>
+    <string name="billing_address">Billing Address</string>
 
 </resources>
