EO-36 Created billing and When user presses "order" on the "shipping/billing", show the order complete page

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,5 +71,6 @@
     <string name="skip">SKIP</string>
     <string name="billing_address">Billing Address</string>
     <string name="qty_title">Qty :</string>
+    <string name="fill_in_important_imformation">Please fill in the important information.</string>
 
 </resources>
