EO-2 Call payment information endpoint and update order for get orderId and Call get order for show success detail and Clear all cache in Realm and Preference when press finish button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,4 +161,6 @@
     <string name="billing_address">Billing Address</string>
     <string name="qty_title">Qty :</string>
     <string name="fill_in_important_imformation">Please fill in the important information.</string>
+    <string name="sorry">ขออภัย</string>
+    <string name="some_thing_wrong">มีบางอย่างผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
 </resources>
