Improve show order number and Change clear cache when user press finish button

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,7 +39,7 @@
     <string name="sub_district">Sub district</string>
     <string name="post_code">Postcode</string>
     <string name="success">Your order is successful</string>
-    <string name="order_number">Order number </string>
+    <string name="order_number">Order number: </string>
     <string name="products">Products</string>
     <string name="price">Price</string>
     <string name="qty">Qty</string>
