--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -80,5 +80,6 @@
     <string name="not_have_products_in_cart">Not have a product in your cart.</string>
     <string name="not_have_user">ไม่มีผู้ใช้ในระบบ ต้องการที่จะข้ามขั้นตอนนี้หรือไม่</string>
     <string name="choose">เลือก</string>
+    <string name="history">History</string>
 
 </resources>
