Fixed layout filter in product list and Fixed popup window

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,19 +70,21 @@
     <string name="skip"><u>SKIP</u></string>
     <string name="billing_address">Billing Address</string>
     <string name="qty_title">Qty:</string>
-    <string name="fill_in_important_information">Please fill in the important information.</string>
+    <string name="fill_in_important_information">กรุณากรอกข้อมูลที่สำคัญให้ถูกต้อง</string>
     <string name="sorry">ขออภัย</string>
     <string name="some_thing_wrong">มีบางอย่างผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
     <string name="comfrim_oder">ยืนยันการซื้อสินค้า</string>
     <string name="ok_alert">ตกลง</string>
     <string name="cancel_alert">ยกเลิก</string>
     <string name="cannot_get_cart_item">ไม่สามารถเรียกสินค้าในตะกร้าได้</string>
-    <string name="not_have_products_in_cart">Not have a product in your cart.</string>
+    <string name="not_have_products_in_cart">ไม่มีสินค้าอยู่ในตะกร้า กรุณาเพิ่มสิาค้าที่ท่านต้องการ</string>
     <string name="not_have_user">ไม่มีผู้ใช้ในระบบ ต้องการที่จะข้ามขั้นตอนนี้หรือไม่</string>
     <string name="choose">เลือก</string>
     <string name="history">History</string>
     <string name="not_have_data">ไม่มีข้อมูล</string>
     <string name="name_user_order">Username: </string>
     <string name="order_date_history">Order Date: </string>
+    <string name="product">Product</string>
+    <string name="sort">Sort</string>
 
 </resources>
