Fixed regular price product detail

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -86,5 +86,6 @@
     <string name="order_date_history">Order Date: </string>
     <string name="product">Product</string>
     <string name="sort">Sort</string>
+    <string name="regular_price">Regular Price: </string>
 
 </resources>
