--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="order_date_history">Order Date: </string>
     <string name="product">Product</string>
     <string name="sort">Sort</string>
+    <string name="regular_price">Regular Price: </string>
 </resources>
