Fix auto fill in billing address in product description page

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,7 +33,7 @@
     <string name="place_or_building">Place/Building</string>
     <string name="soi">Soi</string>
     <string name="street">Street</string>
-    <string name="tel_or_mobile">Tel/Mobile No.</string>
+    <string name="tel_or_mobile">Telephone No.</string>
     <string name="province">Province</string>
     <string name="district">District</string>
     <string name="sub_district">Sub district</string>
