--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="store" translatable="false">Store</string>
     <string name="address" translatable="false">Address</string>
     <string name="stock" translatable="false">Stock</string>
+    <string name="telephone" translatable="false">Telephone No.</string>
 
     <!-- Drawer -->
     <string name="drawer_delivery" translatable="false">Delivery Schedule</string>
@@ -179,4 +180,5 @@
     <string name="sort">Sort</string>
     <string name="regular_price">Regular Price: </string>
     <string name="can_not_show_spec">ไม่สามารถแสดงลักษณะของสินค้าได้ในขณะนี้</string>
+    <string name="store_name">Name</string>
 </resources>
