--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,66 +103,66 @@
     <string name="url_image">https://prod.powerbuy.co.th/media/catalog/product</string>
 
     <!--Login-->
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
+    <string name="username">ชื่อผู้ใช้</string>
+    <string name="password">รหัสผ่าน</string>
+    <string name="login">เข้าสู่ระบบ</string>
     <string name="user">PwbUserName</string>
     <string name="passwordDetail">Pwb1199</string>
     <string name="error">พบข้อผิดพลาด</string>
-    <string name="error_login">Username/Password ไม่ถูกต้อง</string>
-    <string name="add_to_cart">Add to cart</string>
-    <string name="brand">Brand</string>
-    <string name="loading">Loading...</string>
+    <string name="error_login">ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง</string>
+    <string name="add_to_cart">เพิ่มลงตะกร้า</string>
+    <string name="brand">แบรนด์</string>
+    <string name="loading">กำลังโหลด...</string>
 
     <!--Payment-->
-    <string name="payment_header">Payment</string>
-    <string name="user_profile">Personal Details</string>
+    <string name="payment_header">ชำระเงิน</string>
+    <string name="user_profile">ข้อมูลส่วนตัว</string>
     <string name="required_field">*</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string name="tell">Contact Number</string>
-    <string name="email">Email Address</string>
-    <string name="house_on">House no</string>
-    <string name="place_or_building">Place/Building</string>
-    <string name="soi">Soi</string>
-    <string name="street">Street</string>
-    <string name="tel_or_mobile">Telephone No.</string>
-    <string name="province">Province</string>
-    <string name="district">District</string>
-    <string name="sub_district">Sub district</string>
-    <string name="post_code">Postcode</string>
-    <string name="success">Your order is successful</string>
-    <string name="order_number">Order Number: </string>
-    <string name="products">Products</string>
-    <string name="price">Price</string>
-    <string name="qty">Qty</string>
-    <string name="total">Total</string>
-    <string name="total_price">Total:</string>
-    <string name="finished">Finished</string>
-    <string name="order_detail">Order Details</string>
-    <string name="personal_detail">Personal Details</string>
-    <string name="store_collection_detail">Store Collection Details</string>
-    <string name="order_date">Order Date</string>
-    <string name="customer_name">Customer Name</string>
-    <string name="phone">Phone</string>
-    <string name="open_today">Open Today</string>
-    <string name="branch">Branch</string>
+    <string name="first_name">ชื่อ</string>
+    <string name="last_name">นามสกุล</string>
+    <string name="tell">เบอร์ติดต่อ</string>
+    <string name="email">อีเมลล์</string>
+    <string name="house_on">บ้านเลขที่</string>
+    <string name="place_or_building">สถานที่ /อาคาร</string>
+    <string name="soi">ซอย</string>
+    <string name="street">ถนน</string>
+    <string name="tel_or_mobile">เบอร์โทรศัพท์</string>
+    <string name="province">จังหวัด</string>
+    <string name="district">อำเภอ</string>
+    <string name="sub_district">ตำบล</string>
+    <string name="post_code">รหัสไปรษณีย์</string>
+    <string name="success">การสั่งซื้อของคุณเสร็จสมบูรณ์</string>
+    <string name="order_number">ใบสั่งซื้อเลขที่: </string>
+    <string name="products">สินค้า</string>
+    <string name="price">ราคา</string>
+    <string name="qty">จำนวน</string>
+    <string name="total">ยอดรวม</string>
+    <string name="total_price">ยอดรวมทั้งสิ้น</string>
+    <string name="finished">สิ้นสุดการทำรายการ</string>
+    <string name="order_detail">รายละเอียดการสั่งซื้อสินค้า</string>
+    <string name="personal_detail">ข้อมูลการสั่งซื้อ</string>
+    <string name="store_collection_detail">สาขารับสินค้า</string>
+    <string name="order_date">วันที่สั่งซื้อ</string>
+    <string name="customer_name">ชื่อลูกค้า</string>
+    <string name="phone">เบอร์ติดต่อ</string>
+    <string name="open_today">เปิดทำการ</string>
+    <string name="branch">สาขา</string>
     <string name="search_not_found">ไม่พบข้อมูลที่ค้นหา</string>
-    <string name="product_price">Price:</string>
+    <string name="product_price">ราคา:</string>
 
     <!-- Shared Preference -->
     <string name="preference_file_name">pwb_app_preference</string>
-    <string name="added_to_cart">This product is added to card.</string>
+    <string name="added_to_cart">สินค้านี้ถูกเพิ่มลงตะกร้าแล้ว</string>
 
     <!-- Cart -->
     <string name="title_confirm_delete_item">คุณต้องการลบสินค้าชิ้นนี้ออกจากตะกร้า?</string>
     <string name="yes">ใช่</string>
     <string name="no">ไม่ใช่</string>
     <string name="format_header_cart_items">รถเข็นของคุณ(%s ชิ้น)</string>
-    <string name="name_price">Price:</string>
-    <string name="skip"><u>SKIP</u></string>
-    <string name="billing_address">Billing Address</string>
-    <string name="qty_title">Qty:</string>
+    <string name="name_price">ราคา:</string>
+    <string name="skip"><u>ข้าม</u></string>
+    <string name="billing_address">ที่อยู่ในการออกใบเสร็จ</string>
+    <string name="qty_title">จำนวน:</string>
     <string name="fill_in_important_information">กรุณากรอกข้อมูลที่สำคัญให้ถูกต้อง</string>
     <string name="sorry">ขออภัย</string>
     <string name="some_thing_wrong">มีบางอย่างผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
@@ -173,14 +173,14 @@
     <string name="not_have_products_in_cart">ไม่มีสินค้าอยู่ในตะกร้า กรุณาเพิ่มสิาค้าที่ท่านต้องการ</string>
     <string name="not_have_user">ไม่มีผู้ใช้ในระบบ ต้องการที่จะข้ามขั้นตอนนี้หรือไม่</string>
     <string name="choose">เลือก</string>
-    <string name="history">History</string>
+    <string name="history">ประวัติ</string>
     <string name="not_have_data">ไม่มีข้อมูล</string>
-    <string name="name_user_order">Username: </string>
-    <string name="order_date_history">Order Date: </string>
-    <string name="product">Product</string>
-    <string name="sort">Sort</string>
-    <string name="regular_price">Regular Price: </string>
+    <string name="name_user_order">ชื่อผู้ใช้: </string>
+    <string name="order_date_history">วันที่สั่งซื้อ: </string>
+    <string name="product">สินค้า</string>
+    <string name="sort">เรียง</string>
+    <string name="regular_price">ราคาปกติ: </string>
     <string name="can_not_show_spec">ไม่สามารถแสดงลักษณะของสินค้าได้ในขณะนี้</string>
-    <string name="drawer_logout">Logout</string>
+    <string name="drawer_logout">ออกจากระบบ</string>
     <string name="user_logout">คุณต้องการจะออกจากระบบใช่หรือไม่</string>
 </resources>
